[workspace]
resolver = "2"
members = [
    "utils",
    "aoc_derive", "day1", "day2", "day3", "day4", "day5", "day6", "day7", "day8", "day9", "day10", "day11", "day12", "day13", "day14", "day15", "day16", "day17", "day18", "day19", "day20", "day21", "day22", "day23",
]

[workspace.dependencies]
derive_more = "0.99.17"
itertools = "0.12.0"
ndarray = "0.15.6"
num = "0.4.1"
parse-display = "0.8.2"
priority-queue = "1.3.2"
rayon = "1.8.0"
regex = {version = "1.10.2", features = ["pattern"]}
lazy-regex = "3.1.0"
pretty_assertions = "1.4.0"
